--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,10 +4,18 @@
 <head>
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
-	
+
+	<script src = "js/jquery-1.11.0.js"></script>
+	<script src = "js/bootstrap.js"></script>
+	<script src = "js/hci-friends.js"></script>
+
+	<link href="css/boostrap-theme.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel ="stylesheet">
+	<link href="css/hci-friends.css" rel ="stylesheet">
 </head>
 
 <body>
+	<div class="container">
 	<h1>My HCI Friends</h1>
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
@@ -22,5 +30,6 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+	</div>
 </body>
 </html>
