--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,10 +20,8 @@
 	<h1>My HCI Friends</h1>
 	{{#each friends}}
 	<div class ="friend">
-		<a href="friend" >
-			<img src={{imageURL}} class="img-responsive img-rounded">
-		</a>
-		<a href="#">
+		<img src={{imageURL}} class="img-responsive img-rounded">
+		<a href="#" class="nme">
 			<h3>{{name}}</h3>
 		</a>
 		<p>{{description}}</p>
